--- a/index.html
+++ b/index.html
@@ -1,72 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Portfolio by mrao8114</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Portfolio</h1>
-        <p class="header">Portfolio</p>
+<head>
+	<title>Rampup</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/style.css">
+</head>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/mrao8114/portfolio/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/mrao8114/portfolio/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/mrao8114/portfolio">View On GitHub</a></li>
-        </ul>
+<body class="body">
+	
+<!--Opening section-->
+		<section id="openingsection" class="openingsection">
+			<div>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/mrao8114">mrao8114</a></p>
+				<h1 class = "openingsectionh1">Meghana Rao </h1>
+			</div>
+
+			<div>
+				<h2 class ="openingsectionh2" >Please take 5 minutes to see why I am not just another ecommerce entrepreneur.</h2>
+			</div>
+		</section>
+
+<!--About me section-->
+
+		<section class="aboutmesection">
+			<h1 class="aboutmeheading">About me</h1>
+			<span><img src='file:///Users/dilip/Documents/Visual%20cv/img/meghana%20photo.png' alt="Meghana photo" class="meghanaimg"></span>
+				<div class="aboutmepara1"> Hello! My name is Meghana Rao. Over the last 3 years, I was Co-founder of an e-commerce start-up Aniika (www.aniika.com), which was the first online platform for shoppers in the United States to buy limited-edition lifestyle products from independent Indian designers. I raised $375,000 in angel funding, scaled the business to thousands of satisfied customers and increased the company revenues by over 2500% with minimal marketing spend. For various professional and personal reasons, we closed Aniika.com in December 2014.
+				Prior to starting Aniika, I was a management consultant for 5 years. I specialized in helping multinational corporations such as Dell, AT&T, PayPal, Intuit etc align their human capital strategy with their overall business strategy.</div>
+				<div class="aboutmepara2" >My start-up experience at Aniika introduced me to what I love doing - creating web experiences that meet and exceed customer needs. My experience as an ecommerce entrepreneur taught me how to analyze online consumer behavior. As a natural next step, I wanted to learn how to actually build the online experience they are looking for. For this, I decided to invest my time this year in learning front-end programming. This resume is my first work as a front-end programmer. </div>
+				<div class="aboutmepara3">I love start-ups. I have the drive, passion, tenacity and breadth of experience start-ups look for. More specifically, I am interested in Product Management for start-ups. Product management encompasses most of the technical and behavioral competencies I have developed in my career to date. My experience in consulting required me to be proficient at market research and creative problem solving. My experience as an entrepreneur taught me how to balance the big picture with the details, to get the job done no matter what via networking & collaboration, prioritize, simplify and most importantly to think big. I loved that I needed to dirty my hands across all functions and be the binding force across functions. I consider Product Management to be similar – it is the glue between business development, product development, and the users.</div>
+
+		</section>
 
 
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+</body>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
-  </body>
 </html>
