--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Rampup</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 
 <body class="body">
