--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 			<div>
 				<h2 class ="openingsectionh2" >Please take 5 minutes to see why I am not just another ecommerce entrepreneur.</h2>
 			</div>
-		</section>
+		</section>7
 
 <!--About me section-->
 
 		<section class="aboutmesection">
 			<h1 class="aboutmeheading">About me</h1>
-			<span><img src='file:///Users/dilip/Documents/Visual%20cv/img/meghana%20photo.png' alt="Meghana photo" class="meghanaimg"></span>
+			<span><img src="images/meghanaphoto.png"alt="Meghanaphoto" class="meghanaimg"></span>
 				<div class="aboutmepara1"> Hello! My name is Meghana Rao. Over the last 3 years, I was Co-founder of an e-commerce start-up Aniika (www.aniika.com), which was the first online platform for shoppers in the United States to buy limited-edition lifestyle products from independent Indian designers. I raised $375,000 in angel funding, scaled the business to thousands of satisfied customers and increased the company revenues by over 2500% with minimal marketing spend. For various professional and personal reasons, we closed Aniika.com in December 2014.
 				Prior to starting Aniika, I was a management consultant for 5 years. I specialized in helping multinational corporations such as Dell, AT&T, PayPal, Intuit etc align their human capital strategy with their overall business strategy.</div>
 				<div class="aboutmepara2" >My start-up experience at Aniika introduced me to what I love doing - creating web experiences that meet and exceed customer needs. My experience as an ecommerce entrepreneur taught me how to analyze online consumer behavior. As a natural next step, I wanted to learn how to actually build the online experience they are looking for. For this, I decided to invest my time this year in learning front-end programming. This resume is my first work as a front-end programmer. </div>
