first excercise ver 1

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div>
 				<h2 class ="openingsectionh2" >Please take 5 minutes to see why I am not just another ecommerce entrepreneur.</h2>
 			</div>
-		</section>7
+		</section>
 
 <!--About me section-->
 
